# a2-events-vibescraper

./: CALENDAR.md  GOALS.md  pyproject.toml
.github/workflows/: scrape.yml
data/: archive.json  events.json
docs/: _config.yml  archive.md  calendar.html  index.md
output/: ARCHIVE.md  EVENTS.md  calendar.html
vibescraper/: __init__.py  cli.py  dedup.py  html_calendar.py  models.py  renderer.py  store.py
vibescraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vibescraper/scrapers/: __init__.py  a2gov.py  aacomedy.py  aadl.py  aaobserver.py  base.py  blindpig.py  chelsea.py  destinationaa.py  kerrytown.py  theark.py  tribe_events.py  umich.py  washtenaw.py
